# SlySheets-Python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.md
docs/explainers/: ranges.md
docs/tutorial/: getting_started.md  gsheet types.md  poll new rows.md  ranges.md
src/SlySheets/: __init__.py  __main__.py  sheets.py
test/: readme_example.py  test_readme.py  test_sheets_readme.py
