[metadata]
name = SlySheets
version = 0.1.2
author = Dunkyl 🔣🔣
# author_email = 
description = No-boilerplate, async and typed Google Sheets access.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dunkyl/SlyPySheets
project_urls =
    Bug Tracker = https://github.com/dunkyl/SlyPySheets/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    SlyAPI >= 0.2.3
    pytz

[options.extras_require]
dev =
    pytest
    pytest-asyncio

[options.packages.find]
where = src
